--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
 
-  <body>
+  <body> 
     <!--Header Section-->
     <header>
       <!--Navbar Section-->
@@ -39,11 +39,11 @@
                 tabindex="-1"
                 class="menu menu-sm dropdown-content bg-violet-50 rounded-box z-1 mt-3 w-52 p-2 shadow"
               >
-                <li><a>Home</a></li>
-                <li><a>About</a></li>
-                <li><a>Gallery & Projects</a></li>
-                <li><a>Donation & Join</a></li>
-                <li><a>Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./gallary-and-project.html">Gallery & Projects</a></li>
+                <li><a href="./donation-and-join.html">Donation & Join</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </div>
             <a class="w-16"
@@ -52,15 +52,15 @@
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
-              <li><a>Home</a></li>
-              <li><a>About</a></li>
-              <li><a>Gallery & Projects</a></li>
-              <li><a>Donation & Join</a></li>
-              <li><a>Contact</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./gallary-and-project.html">Gallery & Projects</a></li>
+              <li><a href="./donation-and-join.html">Donation & Join</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="navbar-end">
-            <a id="button" class="btn btn-primary">Contact us</a>
+            <a href="./contact.html" id="button" class="btn btn-primary">Contact us</a>
           </div>
         </div>
       </nav>
@@ -395,12 +395,12 @@
 
     <!--Footer Section-->
     <footer
-      class="footer footer-horizontal footer-center bg-teal-600 text-base-content rounded p-10"
+      class="footer footer-horizontal footer-center bg-teal-600 text-base-content rounded p-10 container mx-auto"
     >
       <!--"Newsletter Subscription"-->
 
       <div
-        class="bg-fuchsia-200 w-[90%] lg:w-[60%] rounded-lg p-8 shadow-xl mt-[-100px]"
+        class="bg-blue-200 w-[90%] lg:w-[60%] rounded-lg p-8 shadow-xl mt-[-80px]"
       >
         <div
           class="flex flex-col lg:flex-row items-center justify-between gap-6 text-center lg:text-left"
@@ -432,12 +432,22 @@
         <a href="./contact.html">Contact</a>
       </nav>
       <nav>
-        <div class="grid grid-flow-col gap-4 text-4xl">
-          <a class="hover:text-white"><i class="fa-brands fa-twitter"></i> </a>
-          <a class="hover:text-white"
+        <div class="grid grid-flow-col gap-4 text-3xl">
+          <a href="https://x.com/" target="_blank" class="hover:text-white"
+            ><i class="fa-brands fa-twitter"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="hover:text-white"
             ><i class="fa-brands fa-facebook-f"></i>
           </a>
-          <a class="hover:text-white"><i class="fa-brands fa-telegram"></i> </a>
+          <a
+            href="https://telegram.org/"
+            target="_blank"
+            class="hover:text-white"
+            ><i class="fa-brands fa-telegram"></i>
+          </a>
         </div>
       </nav>
       <aside>
