--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       </nav>
       <aside>
         <p class="text-white">Copyright © 2025 - All right reserved</p>
-        <p class="font-bold text-primary">
+        <p class="font-bold text-white">
           Current Time: <span id="date-time"></span>
         </p>
       </aside>
