--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
               </div>
               <ul
                 tabindex="-1"
-                class="menu menu-sm dropdown-content bg-violet-50 rounded-box z-1 mt-3 w-52 p-2 shadow"
+                class="menu menu-sm dropdown-content bg-blue-200 rounded-box z-1 mt-3 w-52 p-2 shadow"
               >
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
@@ -99,9 +99,9 @@
     <main class="container mx-auto">
       <!--Organization History-->
       <section>
-        <div class="bg-violet-100">
-          <h1 class="text-4xl font-bold text-center py-10">
-            Organization History
+        <div class="bg-violet-50 min-h-screen py-7">
+          <h1 class="text-4xl font-bold text-center py-7">
+            Organization History & Vision
           </h1>
           <div class="flex flex-wrap gap-5 justify-center items-center">
             <div class="card bg-base-100 w-96 lg:w-[40%] shadow-sm">
@@ -115,9 +115,7 @@
                 </p>
               </div>
               <figure>
-                <img
-                  src="./image/history-org.jpg" height="100%" width="100%"
-                />
+                <img src="./image/history-org.jpg" height="100%" width="100%" />
               </figure>
             </div>
             <div class="card bg-base-100 w-96 lg:w-[40%] shadow-sm">
@@ -133,7 +131,9 @@
               </div>
               <figure>
                 <img
-                  src="./image/history-org-1.jpg" height="100%" width="100%"
+                  src="./image/history-org-1.jpg"
+                  height="100%"
+                  width="100%"
                 />
               </figure>
             </div>
@@ -149,8 +149,9 @@
               </div>
               <figure>
                 <img
-                  src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                  alt="Shoes"
+                  src="./image/history-org-2.jpg"
+                  height="100%"
+                  width="100%"
                 />
               </figure>
             </div>
@@ -167,14 +168,115 @@
               </div>
               <figure>
                 <img
-                  src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                  alt="Shoes"
+                  src="./image/history-org-3.jpg"
+                  height="100%"
+                  width="100%"
                 />
               </figure>
             </div>
           </div>
         </div>
       </section>
+
+      <!--Team Member-->
+      <section class="bg-violet-50 min-h-screen">
+        <h1 class="text-center pt-20 text-4xl font-bold">Meet Our Team</h1>
+        <p class="text-center py-2 px-5 lg:px-80">
+          Write some fun facts about each one. Highlight personalities that
+          would be of interest to visitors. Explain the value of each team
+          member. Use high-quality images to draw people in.
+        </p>
+        <div
+          class="grid grid-rows-1 gap-5 p-20 lg:grid-cols-3 lg:pt-28 justify-center items-center"
+        >
+          <div
+            class="card bg-base-100 w-96 border-b-4 border-teal-600 shadow-sm"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./image/team-1.jpg" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Arina</h2>
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 border-b-4 border-teal-600 shadow-sm"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./image/team-2.jpg" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Lily</h2>
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 border-b-4 border-teal-600 shadow-sm"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./image/team-3.jpg" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">John</h2>
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 border-b-4 border-teal-600 shadow-sm"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./image/team-4.jpeg" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Luna</h2>
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 border-b-4 border-teal-600 shadow-sm"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./image/team-6.jpg" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Alex</h2>
+            
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+            </div>
+          </div>
+          <div
+            class="card bg-base-100 w-96 border-b-4 border-teal-600 shadow-sm"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./image/team-5.jpg" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Anaina</h2>
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      
     </main>
 
     <!--Footer Section-->
