--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </div>
               <ul
                 tabindex="-1"
-                class="menu menu-sm dropdown-content bg-violet-50 rounded-box z-1 mt-3 w-52 p-2 shadow"
+                class="menu menu-sm dropdown-content bg-blue-200 rounded-box z-1 mt-3 w-52 p-2 shadow"
               >
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
