--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li>
-                  <a href="./gallary-and-project.html">Gallery & Projects</a>
+                  <a href="./gallary-and-project.html">Gallery </a>
                 </li>
-                <li><a href="./donation-and-join.html">Donation & Join</a></li>
+                <li><a href="./donation-and-join.html">Donation </a></li>
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
             </div>
@@ -57,9 +57,9 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About</a></li>
               <li>
-                <a href="./gallary-and-project.html">Gallery & Projects</a>
+                <a href="./gallary-and-project.html">Gallery</a>
               </li>
-              <li><a href="./donation-and-join.html">Donation & Join</a></li>
+              <li><a href="./donation-and-join.html">Donation </a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
@@ -253,7 +253,7 @@
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">Alex</h2>
-            
+
               <p>
                 A card component has a figure, a body part, and inside body
                 there are title and actions parts
@@ -276,7 +276,6 @@
           </div>
         </div>
       </section>
-      
     </main>
 
     <!--Footer Section-->
