--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
 
-  <body> 
+  <body>
     <!--Header Section-->
     <header>
       <!--Navbar Section-->
@@ -41,8 +41,8 @@
               >
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="./gallary-and-project.html">Gallery & Projects</a></li>
-                <li><a href="./donation-and-join.html">Donation & Join</a></li>
+                <li><a href="./gallary-and-project.html">Gallery</a></li>
+                <li><a href="./donation-and-join.html">Donation </a></li>
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
             </div>
@@ -54,13 +54,17 @@
             <ul class="menu menu-horizontal px-1">
               <li><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About</a></li>
-              <li><a href="./gallary-and-project.html">Gallery & Projects</a></li>
-              <li><a href="./donation-and-join.html">Donation & Join</a></li>
+              <li>
+                <a href="./gallary-and-project.html">Gallery </a>
+              </li>
+              <li><a href="./donation-and-join.html">Donation</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="navbar-end">
-            <a href="./contact.html" id="button" class="btn btn-primary">Contact us</a>
+            <a href="./contact.html" id="button" class="btn btn-primary"
+              >Contact us</a
+            >
           </div>
         </div>
       </nav>
