--- a/donation-and-join.html
+++ b/donation-and-join.html
@@ -96,9 +96,222 @@
     </header>
 
     <main class="container mx-auto">
+      <!--Donation Section-->
+      <section>
+        <div class="bg-violet-100 py-10">
+          <h1 class="text-4xl font-bold text-center pb-10">
+            Donation Packages
+          </h1>
+          <div class="max-w-[95%] mx-auto">
+            <div
+              class="grid grid-cols-1 gap-5 lg:grid-cols-3 place-items-center"
+            >
+              <div class="card w-96 bg-base-100 shadow-sm">
+                <div class="card-body">
+                  <div class="flex justify-between">
+                    <h2 class="text-3xl font-bold">1 Tree</h2>
+                    <span class="text-xl">$5</span>
+                  </div>
+                  <ul class="mt-6 flex flex-col gap-2 text-sm">
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i
+                      ><span> Mass Tree Plantation Programs</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Eco-friendly Planning & Design</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Native Tree Preservation</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Community Engagement & Volunteering</span>
+                    </li>
+                    <li class="opacity-50">
+                      <i class="fa-solid fa-check"></i>
+                      <span class="line-through">
+                        Growth Monitoring & Impact Tracking</span
+                      >
+                    </li>
+                    <li class="opacity-50">
+                      <i class="fa-solid fa-check"></i>
+                      <span class="line-through">
+                        Sustainable Green Infrastructure</span
+                      >
+                    </li>
+                  </ul>
+                  <div class="mt-6">
+                    <button class="btn btn-primary btn-block">More Info</button>
+                  </div>
+                </div>
+              </div>
+              <div class="card w-96 bg-base-100 shadow-sm">
+                <div class="card-body">
+                  <div class="flex justify-between">
+                    <h2 class="text-3xl font-bold">10 Tree</h2>
+                    <span class="text-xl">$40</span>
+                  </div>
+                  <ul class="mt-6 flex flex-col gap-2 text-sm">
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i
+                      ><span> Mass Tree Plantation Programs</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Eco-friendly Planning & Design</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Native Tree Preservation</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Community Engagement & Volunteering</span>
+                    </li>
+                    <li class="opacity-50">
+                      <i class="fa-solid fa-check"></i>
+                      <span class="line-through">
+                        Growth Monitoring & Impact Tracking</span
+                      >
+                    </li>
+                    <li class="opacity-50">
+                      <i class="fa-solid fa-check"></i>
+                      <span class="line-through">
+                        Sustainable Green Infrastructure</span
+                      >
+                    </li>
+                  </ul>
+                  <div class="mt-6">
+                    <button class="btn btn-primary btn-block">More Info</button>
+                  </div>
+                </div>
+              </div>
+              <div class="card w-96 bg-base-100 shadow-sm">
+                <div class="card-body">
+                  <div class="flex justify-between">
+                    <h2 class="text-3xl font-bold">100 Tree</h2>
+                    <span class="text-xl">$400</span>
+                  </div>
+                  <ul class="mt-6 flex flex-col gap-2 text-sm">
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i
+                      ><span> Mass Tree Plantation Programs</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Eco-friendly Planning & Design</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Native Tree Preservation</span>
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: green"></i>
+                      <span> Community Engagement & Volunteering</span>
+                    </li>
+                    <li class="opacity-50">
+                      <i class="fa-solid fa-check"></i>
+                      <span class="line-through">
+                        Growth Monitoring & Impact Tracking</span
+                      >
+                    </li>
+                    <li class="opacity-50">
+                      <i class="fa-solid fa-check"></i>
+                      <span class="line-through">
+                        Sustainable Green Infrastructure</span
+                      >
+                    </li>
+                  </ul>
+                  <div class="mt-6">
+                    <button class="btn btn-primary btn-block">More Info</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--Donation Section-->
+      <section>
+        <div class="bg-violet-100 py-10">
+          <h1 class="text-4xl font-bold text-center pb-10">
+            Volunteer Registration
+          </h1>
+          <div class="lg:w-1/3 mx-auto">
+            <div class="card bg-base-100 shadow-2xl">
+              <div class="card-body">
+                <h2 class="text-2xl font-bold mb-4">Registration Now</h2>
+                <form id="contactForm">
+                  <div class="form-control mb-4">
+                    <label class="label"
+                      ><span class="label-text font-bold text-black"
+                        >Name</span
+                      ></label
+                    >
+                    <input
+                      type="text"
+                      id="name"
+                      placeholder="Enter your name"
+                      class="input input-bordered w-full"
+                    />
+                  </div>
+                  <div class="form-control mb-4">
+                    <label class="label"
+                      ><span class="label-text font-bold text-black"
+                        >Email</span
+                      ></label
+                    >
+                    <input
+                      type="email"
+                      id="email"
+                      placeholder="email@example.com"
+                      class="input input-bordered w-full"
+                    />
+                  </div>
+
+                  <div class="form-control mb-4">
+                    <label class="label"
+                      ><span class="label-text font-bold text-black"
+                        >Address</span
+                      ></label
+                    >
+                    <input
+                      type="text"
+                      id="address"
+                      placeholder="Your Address"
+                      class="input input-bordered w-full"
+                    />
+                  </div>
+
+                  <div class="form-control mb-6">
+                    <label class="label"
+                      ><span class="label-text font-bold text-black"
+                        >Message</span
+                      ></label
+                    >
+                    <textarea
+                      id="message"
+                      class="textarea textarea-bordered h-24 w-full"
+                      placeholder="Your message here..."
+                    ></textarea>
+                  </div>
+
+                  <button type="submit" class="btn btn-primary w-full">
+                    Submit
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!--FAQ-->
       <section>
-        <div class="bg-violet-50">
+        <div class="bg-violet-100">
           <h1 class="text-center pt-10 text-4xl font-bold">FAQ</h1>
           <div class="max-w-[95%] mx-auto py-7">
             <div class="collapse bg-blue-100 border-red-300 border my-2">
