--- a/donation-and-join.html
+++ b/donation-and-join.html
@@ -240,69 +240,51 @@
           <h1 class="text-4xl font-bold text-center pb-10">
             Volunteer Registration
           </h1>
-          <div class="lg:w-1/3 mx-auto">
-            <div class="card bg-base-100 shadow-2xl">
-              <div class="card-body">
-                <h2 class="text-2xl font-bold mb-4">Registration Now</h2>
-                <form id="contactForm">
-                  <div class="form-control mb-4">
-                    <label class="label"
-                      ><span class="label-text font-bold text-black"
-                        >Name</span
-                      ></label
-                    >
-                    <input
-                      type="text"
-                      id="name"
-                      placeholder="Enter your name"
-                      class="input input-bordered w-full"
-                    />
-                  </div>
-                  <div class="form-control mb-4">
-                    <label class="label"
-                      ><span class="label-text font-bold text-black"
-                        >Email</span
-                      ></label
-                    >
-                    <input
-                      type="email"
-                      id="email"
-                      placeholder="email@example.com"
-                      class="input input-bordered w-full"
-                    />
-                  </div>
-
-                  <div class="form-control mb-4">
-                    <label class="label"
-                      ><span class="label-text font-bold text-black"
-                        >Address</span
-                      ></label
-                    >
-                    <input
-                      type="text"
-                      id="address"
-                      placeholder="Your Address"
-                      class="input input-bordered w-full"
-                    />
-                  </div>
-
-                  <div class="form-control mb-6">
-                    <label class="label"
-                      ><span class="label-text font-bold text-black"
-                        >Message</span
-                      ></label
-                    >
-                    <textarea
-                      id="message"
-                      class="textarea textarea-bordered h-24 w-full"
-                      placeholder="Your message here..."
-                    ></textarea>
-                  </div>
-
-                  <button type="submit" class="btn btn-primary w-full">
+          <div class="p-5 lg:w-[80%] mx-auto">
+            <div class="hero bg-blue-300 p-10">
+              <div class="hero-content flex-col lg:flex-row-reverse">
+                <div class="text-center lg:text-left">
+                  <h1 class="text-5xl font-bold">Registration Now!</h1>
+                  <p class="py-6">
+                    Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                    assumenda excepturi exercitationem quasi. In deleniti eaque
+                    aut repudiandae et a id nisi. Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Non sint, modi cumque
+                    voluptatibus qui, rerum odio rem veniam laborum, ipsa
+                    perferendis eligendi impedit eaque quae quas. Possimus
+                    soluta quae tenetur.
+                  </p>
+                </div>
+                <div
+                  class="card bg-violet-100 w-full max-w-sm shrink-0 shadow-2xl"
+                >
+                  <form id="registration">
+                    <div class="card-body">
+                      <fieldset class="fieldset">
+                        <label class="label">Email</label>
+                        <input
+                          id="email"
+                          type="email"
+                          class="input"
+                          placeholder="Email"
+                        />
+                        <label class="label">Password</label>
+                        <input
+                          id="password"
+                          type="password"
+                          class="input"
+                          placeholder="Password"
+                        />
+                        <div>
+                          <a class="link link-hover">Forgot password?</a>
+                        </div>
+                         <button type="submit" class="btn btn-primary w-full">
                     Submit
                   </button>
-                </form>
+                      </fieldset>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
